--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -29,6 +29,10 @@
         @include typeScale($button-type-scale + 1);
     }
 
+    &.huge {
+        @include typeScale($button-type-scale + 2);
+    }
+
     &.left { float: left; }
 
     &.right { float: right; margin-right: 0; }
