--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -52,6 +52,8 @@ $type-header-margin-top: 0 !default;
 $type-header-margin-bottom: $x-rem !default;
 $type-header-small-style: uppercase !default;
 
+$hgroup-margin-bottom: $type-header-margin-bottom !default;
+
 $type-p-margin-bottom: $x-rem !default;
 $type-p-line-height: 1.5 !default;
 $type-p-font-weight: $type-base-font-weight !default;
