--- a/scss/modules/_layout.scss
+++ b/scss/modules/_layout.scss
@@ -28,7 +28,12 @@ html {
 //   <footer></footer>
 // </body>
 // THIS IS IE 9+ AND MODERN BROWSERS ONLY
-@mixin layout($header-height: 0, $footer-height: 0) {
+@mixin layout(
+    $header-height: 0, 
+    $footer-height: 0,
+    $left-aside-width: 0,
+    $right-aside-width: 0
+) {
     position: absolute;
     height: 100%;
     max-height: 100%;
