--- a/scss/iassist.scss
+++ b/scss/iassist.scss
@@ -34,10 +34,22 @@ body {
                 padding: 1rem;
             }
         }
+
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            height: 10px;
+            background: green;
+        }
     }
 
-    h1, h2 { font-weight: 400; }
-    h1, h2, h3, h4, h5 { margin-bottom: 2rem; }
+    h1, .iassist { font-weight: 400; }
+
+    h1, h2, h3, h4, h5 { margin-bottom: 1.8rem; }
 }
 
 #view1 {
@@ -73,7 +85,7 @@ body {
 }
 
 #view2 {
-    @include background($color-light);
+    @include background(darken($color-light, 5%));
 
     h1 {
         @include typeScale(6);
@@ -114,7 +126,15 @@ footer {
 
     form {
         h2 { margin-bottom: 0.8rem; font-weight: 200; }
-        @include background($arx-blue-dark);
+        @include background($color-light);
+
+        input[type=text], input[type=password] { border-color: mix($arx-blue-dark, white, 50%); }
+        .field + .field {
+            margin-top: -1px;
+
+        }
+        button, .button { float: right; }
+        button { margin-right: 0; }
     }
 }
 
