Adding gutter support

--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -17,6 +17,8 @@ $grid-columns: 12 !default;
 $grid-rows: 12 !default;
 $grid-padding: $x !default;
 $grid-max-width: 960px !default;
+$grid-column-gutter: $x !default;
+$grid-row-gutter: $x !default;
 
 // Layout Settings
 $layout-min-selector: ".min" !default;
