--- a/scss/modules/_grid.scss
+++ b/scss/modules/_grid.scss
@@ -22,25 +22,29 @@
 
     &.col-inline { height: auto; }
 }
+%column-gutter {
+    &, > [class*="col-"] {
+        padding-left: $grid-column-gutter / 2;
+        padding-right: $grid-column-gutter / 2;  
+    }
+}
 %row {
     @extend %grid;
     width: 100%;
+}
+%row-gutter {
+    &, > [class*="row-"] {
+        padding-top: $grid-row-gutter / 2;
+        padding-bottom: $grid-row-gutter / 2;  
+    }
 }
 
 //
 // Horizontal Grid System
 // ======================
 
-@mixin columns($columns, $gutter: false, $flex: true) {
-    $_width: ($columns / $grid-columns) * 100%;
-
-    @if $gutter {
-        width: calc(#{$_width} - (#{$gutter} * 2));
-        margin-left: $gutter;
-        margin-right: $gutter;
-    } @else {
-        width: $_width;
-    }
+@mixin columns($columns, $flex: true) {
+    width: ($columns / $grid-columns) * 100%;
 
     @if $flex {    
         + .col-flex {
@@ -89,6 +93,10 @@
 
 #{$grid-column-selector} {
     @extend %column;
+
+    &.row-gutter {
+        @extend %row-gutter;
+    }
 }
 
 //
@@ -152,6 +160,10 @@
 
 #{$grid-row-selector} {
     @extend %row;
+
+    &.col-gutter {
+        @extend %column-gutter;
+    }
 }
 
 //
